--- a/client/templates/Header/Header.less
+++ b/client/templates/Header/Header.less
@@ -86,5 +86,14 @@
     &.active {
       color: #1ec81e;
     }
+
+    &[disabled] {
+      opacity: 0.5;
+      cursor: default;
+
+      &:hover, &:active, &:focus {
+        background-color: transparent;
+      }
+    }
   }
 }
